methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:5: error: Boolean does not take parameters
      forward()
             ^